Stops horizontal scrollbar when browser mamboing

--- a/mainsite/css/style.css
+++ b/mainsite/css/style.css
@@ -36,9 +36,9 @@
 }
 
 body{
+	overflow: hidden;
 	background-color: #6DA46D;
 	background-image: url('../img/circuit.svg');
-	
 	font-family: Helvetica, Arial, sans-serif;
 }
 
